RESOLVED FIXED276668
[visionOS] Cannot disable captions in native fullscreen
https://bugs.webkit.org/show_bug.cgi?id=276668
Summary [visionOS] Cannot disable captions in native fullscreen
Jer Noble
Reported 2024-07-16 11:01:07 PDT
[visionOS] Cannot disable captions in native fullscreen
Attachments
Jer Noble
Comment 1 2024-07-16 11:01:15 PDT
Jer Noble
Comment 2 2024-07-16 11:05:05 PDT
EWS
Comment 3 2024-07-16 16:56:34 PDT
Committed 281025@main (25f0f294ef46): <https://commits.webkit.org/281025@main> Reviewed commits have been landed. Closing PR #30868 and removing active labels.
EWS
Comment 4 2024-07-19 14:56:27 PDT
Committed 280938.79@integration/ci/131477154_25f0f294ef_safari-7619-branch (3b36bf307e0f): <https://commits.webkit.org/280938.79@integration/ci/131477154_25f0f294ef_safari-7619-branch> Reviewed commits have been landed. Closing PR #1419 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.