Cherry-pick 25f0f294ef46. rdar://131477154

[visionOS] Cannot disable captions in native fullscreen
    https://bugs.webkit.org/show_bug.cgi?id=276668
    rdar://131477154

    Reviewed by Andy Estes.

    LinearMediaKit can un-hide the caption layer provided via Playable at any point, so
    setting the caption layer's `hidden` property is unreliable to actually hide the layer.

    In addition to hiding the layer, also remove the layer's contents (and store it for
    re-use later).

    * Source/WebCore/platform/cocoa/VideoFullscreenCaptions.h:
    * Source/WebCore/platform/cocoa/VideoFullscreenCaptions.mm:
    (WebCore::VideoFullscreenCaptions::setTrackRepresentationImage):
    (WebCore::VideoFullscreenCaptions::setTrackRepresentationHidden):

    Canonical link: https://commits.webkit.org/281025@main

Canonical link: https://commits.webkit.org/280938.79@integration/ci/131477154_25f0f294ef_safari-7619-branch