Source/WebCore/platform/cocoa/VideoFullscreenCaptions.mm
@@ -36,6 +36,10 @@ VideoFullscreenCaptions::~VideoFullscreenCaptions() = default;
 
 void VideoFullscreenCaptions::setTrackRepresentationImage(PlatformImagePtr textTrack)
 {
+    if (m_captionsLayerHidden) {
+        m_captionsLayerContents = (__bridge id)textTrack.get();
+        return;
+    }
     [CATransaction begin];
     [CATransaction setDisableActions:YES];
     [m_captionsLayer setContents:(__bridge id)textTrack.get()];
@@ -49,7 +53,21 @@ void VideoFullscreenCaptions::setTrackRepresentationContentsScale(float scale)
 
 void VideoFullscreenCaptions::setTrackRepresentationHidden(bool hidden)
 {
-    [m_captionsLayer setHidden:hidden];
+    if (hidden == m_captionsLayerHidden)
+        return;
+    m_captionsLayerHidden = hidden;
+
+    // LinearMediaKit will un-hide the captionsLayer, so ensure the layer
+    // is visually hidden by removing (and storing) the contents of the
+    // captionsLayer.
+    [m_captionsLayer setHidden:m_captionsLayerHidden];
+    if (m_captionsLayerHidden) {
+        m_captionsLayerContents = [m_captionsLayer contents];
+        [m_captionsLayer setContents:nil];
+    } else {
+        [m_captionsLayer setContents:m_captionsLayerContents.get()];
+        m_captionsLayerContents = nil;
+    }
 }
 
 CALayer *VideoFullscreenCaptions::captionsLayer()
